Fix navbar overlap issue for mid-small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 
 html,
 body{
-    background-color: aliceblue;
+    background-color: #F0F8FF;
     height: 100%;
     margin: 0;
     padding: 0;
